tests/implements/implements.exp
Error -------------------------------------------------------------- test.js:5:7

Cannot implement `IFoo` with `C1` because property `foo` is missing in `C1` but
exists in `IFoo`.

Error: test.js:5
  5: class C1 implements IFoo {} // error: property `foo` not found
           ^^ Cannot implement `IFoo` [1] with `C1` because property `foo` is missing in `C1` [2] but exists in `IFoo` [1].
  References:
    5: class C1 implements IFoo {} // error: property `foo` not found
                           ^^^^ [1]: `IFoo`
    5: class C1 implements IFoo {} // error: property `foo` not found
             ^^ [2]: `C1`

Error ------------------------------------------------------------- test.js:6:33

Cannot implement `IFoo` with `C2` because in property `foo`, number is
incompatible with string.

Error: test.js:6
  6: class C2 implements IFoo { foo: number } // error: number <~> string
                                     ^^^^^^ Cannot implement `IFoo` [1] with `C2` because in property `foo`, number [2] is incompatible with string [3].
  References:
    6: class C2 implements IFoo { foo: number } // error: number <~> string
                           ^^^^ [1]: `IFoo`
    6: class C2 implements IFoo { foo: number } // error: number <~> string
                                       ^^^^^^ [2]: number
    3: interface IFoo { foo: string }
                             ^^^^^^ [3]: string

Error ------------------------------------------------------------- test.js:13:7

Cannot implement `IBar` with `C4` because property `bar` is missing in `C4` but
exists in `IBar`.

Error: test.js:13
 13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
           ^^ Cannot implement `IBar` [1] with `C4` because property `bar` is missing in `C4` [2] but exists in `IBar` [1].
  References:
   13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                                 ^^^^ [1]: `IBar`
   13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]: `C4`

Error ------------------------------------------------------------- test.js:13:7

Cannot implement `IFoo` with `C4` because property `foo` is missing in `C4` but
exists in `IFoo`.

Error: test.js:13
 13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
           ^^ Cannot implement `IFoo` [1] with `C4` because property `foo` is missing in `C4` [2] but exists in `IFoo` [1].
  References:
   13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                           ^^^^ [1]: `IFoo`
   13: class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]: `C4`

Error ------------------------------------------------------------- test.js:18:7

Cannot implement `IFooBar` with `C5` because property `bar` is missing in `C5`
but exists in `IFooBar`.

Error: test.js:18
 18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
           ^^ Cannot implement `IFooBar` [1] with `C5` because property `bar` is missing in `C5` [2] but exists in `IFooBar` [1].
  References:
   18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [1]: `IFooBar`
   18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
             ^^ [2]: `C5`

Error ------------------------------------------------------------- test.js:18:7

Cannot implement `IFooBar` with `C5` because property `foo` is missing in `C5`
but exists in `IFoo`.

Error: test.js:18
 18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
           ^^ Cannot implement `IFooBar` [1] with `C5` because property `foo` is missing in `C5` [2] but exists in `IFoo` [3].
  References:
   18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [1]: `IFooBar`
   18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
             ^^ [2]: `C5`
   18: class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [3]: `IFoo`

Error ------------------------------------------------------------- test.js:21:2

Cannot cast `new C5()` to `IBar` because property `bar` is missing in `C5` but
exists in `IBar`.

Error: test.js:21
 21: (new C5: IBar); // error: property `bar` not found (despite IBar < IFooBar)
      ^^^^^^ Cannot cast `new C5()` to `IBar` because property `bar` is missing in `C5` [1] but exists in `IBar` [2].
  References:
   21: (new C5: IBar); // error: property `bar` not found (despite IBar < IFooBar)
        ^^^^^^ [1]: `C5`
   21: (new C5: IBar); // error: property `bar` not found (despite IBar < IFooBar)
                ^^^^ [2]: `IBar`

Error ------------------------------------------------------------ test.js:26:21

Cannot implement `C1` because it is not an interface.

Error: test.js:26
 26: class C7 implements C1 {} // error: C1 is a class, expected an interface
                         ^^ Cannot implement `C1` because it is not an interface.


Found 8 errors
